<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvA"
        android:layout_width="30dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvA"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvB"
        android:layout_width="30dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvB"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvA" />

    <EditText
        android:id="@+id/edA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvA"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="labelfor" />

    <EditText
        android:id="@+id/edB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/tvB"
        app:layout_constraintTop_toBottomOf="@+id/edA"
        app:layout_constraintVertical_bias="0.275"
        tools:ignore="labelfor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvB">

        <RadioButton
            android:id="@+id/rdCong"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:text="@string/rdCong" />

        <RadioButton
            android:id="@+id/rdTru"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:text="@string/rdTru" />

        <RadioButton
            android:id="@+id/rdNhan"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:text="@string/rdNhan" />

        <RadioButton
            android:id="@+id/rdChia"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:text="@string/rdChia" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="282dp"
        android:layout_height="165dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="22dp"
        android:background="#FF1D0C"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#FFFFC107"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/BT0"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so0"
                android:text="@string/BT0"
                tools:text="0" />

            <Button
                android:id="@+id/BT1"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so1"
                android:text="@string/BT1"
                tools:text="1" />

            <Button
                android:id="@+id/BT2"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so2"
                android:text="@string/BT2" />

            <Button
                android:id="@+id/BT3"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so3"
                android:text="@string/BT3"
                tools:text="3" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#FFFFC107"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/BT4"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so4"
                android:text="@string/BT4"
                tools:text="4" />

            <Button
                android:id="@+id/BT5"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so5"
                android:text="@string/BT5" />

            <Button
                android:id="@+id/BT6"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so6"
                android:text="@string/BT6" />

            <Button
                android:id="@+id/BT7"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so7"
                android:text="@string/BT7" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#FFFFC107"
            android:orientation="horizontal"
            android:weightSum="3"
            tools:layout_editor_absoluteX="-117dp"
            tools:layout_editor_absoluteY="359dp">

            <Button
                android:id="@+id/BT8"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so8"
                android:text="@string/BT8" />

            <Button
                android:id="@+id/BT9"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="so9"
                android:text="@string/BT9" />

            <Button
                android:id="@+id/BTCAL"
                style="Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="display"
                android:text="@string/BTCAL" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/BTRESET"
        style="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:onClick="reset"
        android:text="@string/BTRESET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/BTEXIT"
        style="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="89dp"
        android:layout_weight="1"
        android:onClick="exit"
        android:text="@string/BTEXIT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/TVKQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="93dp"
        android:text="@string/TVKQ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        tools:ignore="LabelFor"
        android:id="@+id/PTKQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PTKQ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVKQ" />


</androidx.constraintlayout.widget.ConstraintLayout>